# item-search-nexus

./: .gitignore  CMakeLists.txt  LICENSE  Nexus.h  README.md  build.bat  external_links.json  nexus_description.txt  toolchain-mingw.cmake
headers/: mumbleheader.h
src/: addon.cpp  addon.h  dllmain.cpp  icon_data.h
src/api/: gw2_api.cpp  gw2_api.h  http_client.cpp  http_client.h
src/data/: inventory_item.h  item_db.cpp  item_db.h  player_items.cpp  player_items.h
src/ui/: icon_cache.cpp  icon_cache.h  main_window.cpp  main_window.h
